syntax = "proto3";

package go.micro.srv.playerservice;

service PlayerService {
    rpc Draft(DraftPlayerRequest) returns (PlayerResponse) {}
    rpc Get(PlayerRequest) returns (PlayerResponse) {}
    rpc Update(UpdatePlayerRequest) returns (PlayerResponse) {}    
    rpc GetAll(AllPlayersRequest) returns (AllPlayersResponse) {}
}

message Player {
    int32 Id = 1;
    int32 TeamId = 2;
    string Name = 3;
    string Position = 4;
    int32 Rating = 5;
}

message DraftPlayerRequest {
    string name = 1;
    int32 teamId = 2;
    string position = 3;
}

message UpdatePlayerRequest {
    int32 id = 1;
    int32 teamId = 2;
    int32 rating = 3;
}

message PlayerRequest {
    int32 playerId = 1;
}

message PlayerResponse {
    Player player = 1;
}

message AllPlayersRequest {
    int32 teamId = 1;
}

message AllPlayersResponse {
    repeated Player players = 1;
}
